# AgilentTools

./: CMakeLists.txt  easy_build.sh
Source/: MultiArray-inl.h  MultiArray.h  fdf.cpp  fdf.h  fdf2nii.cpp  fdf2nii.py  fdfFile.cpp  fdfFile.h  fdfbval.cpp  fdfhdr.cpp  fid.cpp  fid.h  fid2nii.cpp  fidFile.cpp  fidFile.h  nifti_analyze.h  niiEnum.h  niiExtension.cpp  niiExtension.h  niiExtensionCodes.h  niiHeader.cpp  niiHeader.h  niiInternal-inl.h  niiInternal.cpp  niiInternal.h  niiNifti-inl.h  niiNifti.cpp  niiNifti.h  niiZipFile.cpp  niiZipFile.h  procpar.cpp  procpar.h  procparse.cpp  util.cpp  util.h
